--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -10,7 +10,7 @@
   width: 100%;
   bottom: 60px;
   top: 0;
-  background-color: lightcoral;
+  /* background-color: lightcoral; */
 }
 .home_menu{
   position: absolute;
